use-cases/security/s2s-authz/curl-pod-with-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  namespace: asm-usecase
spec:
  restartPolicy: Never
  serviceAccountName: curl-pod
  containers:
    - name: debug
      image: ellerbrock/alpine-bash-curl-ssl
      command: ["sh", "-c", "tail -f /dev/null"]
      resources:
        limits:
          cpu: 50m
          memory: 256Mi
